--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <audio id="audio" controls>
                 <source id="songSource" src="./audios/foodSongs.mp3">
             </audio>
+            <video style="margin-top: 10px;" height="200" width="316" controls id="video" src=""></video>
             <button onclick="loadSong()" id="load" class="btn btn-success">Load</button>
         </div>
     </div>
